<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hackathon.random.MainActivity">

    <include layout="@layout/action_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/share_background" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_padding"
                android:layout_marginStart="@dimen/normal_padding"
                android:orientation="vertical">

                <TextView
                    style="@style/randomize_header_text"
                    android:text="@string/randomize_by" />

                <Spinner
                    android:id="@+id/method_spinner"
                    style="@style/randomize_spinner" />

                <TextView
                    style="@style/randomize_header_text"
                    android:text="@string/category_by" />

                <Spinner
                    android:id="@+id/category_spinner"
                    style="@style/randomize_spinner" />

                <TextView
                    style="@style/randomize_header_text"
                    android:text="@string/add_name" />

                <EditText
                    android:id="@+id/randomizer_name_edit_text"
                    style="@style/randomize_edit_text"
                    android:layout_width="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_padding"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/large_padding"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/randomize_seed_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seeds"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/standard_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/optional"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/small_text_size" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/randomizer_seed_edit_text"
                        style="@style/randomize_edit_text"
                        android:layout_width="@dimen/seed_edit_text_width"
                        android:inputType="number" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/add_participant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_green_button"
                        android:onClick="onAddClicked"
                        android:text="@string/add"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/standard_text_size" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/randomizer_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

                <TextView
                    android:id="@+id/randomizer_total_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_padding"
                    android:layout_marginStart="@dimen/normal_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/team_number_textview"
                    style="@style/randomize_header_text"
                    android:text="@string/number_of_teams" />

                <EditText
                    android:id="@+id/randomizer_team_num_edit_text"
                    style="@style/randomize_edit_text"
                    android:inputType="number"
                    android:layout_width="match_parent" />

                <Button
                    android:id="@+id/btn_randomize"
                    style="@style/blue_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:onClick="onRandomizeClicked"
                    android:text="@string/randomize" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>