<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_green"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_padding"
        android:background="@color/dark_green"
        android:gravity="center"
        android:paddingBottom="@dimen/normal_padding"
        android:paddingTop="@dimen/normal_padding"
        android:text="@string/edit"
        android:textColor="@color/light_green"
        android:textSize="@dimen/standard_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_dialog_name"
            android:layout_width="@dimen/edit_dialog_name_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_padding"
            android:background="@drawable/bg_white_edit_text"
            android:padding="@dimen/normal_padding"
            android:textSize="@dimen/standard_text_size" />

        <EditText
            android:id="@+id/edit_dialog_seed"
            android:layout_width="@dimen/edit_dialog_seed_width"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_edit_text"
            android:inputType="number"
            android:padding="@dimen/normal_padding"
            android:textSize="@dimen/standard_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_dialog_save"
        android:layout_width="@dimen/edit_dialog_button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_padding"
        android:background="@drawable/bg_blue_button"
        android:text="@string/save"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/edit_dialog_delete"
        android:layout_width="@dimen/edit_dialog_button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_padding"
        android:background="@drawable/bg_orange_button"
        android:text="@string/delete"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/edit_dialog_cancel"
        android:layout_width="@dimen/edit_dialog_button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_padding"
        android:background="@drawable/bg_gray_button"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />
</LinearLayout>