...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar_height"
    android:background="@color/header_background_color">

    <ImageView
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingEnd="@dimen/large_padding"
        android:paddingStart="@dimen/large_padding"
        android:onClick="onBackClicked"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@color/header_title_color"
        android:textSize="@dimen/header_title_text_size"
        tools:ignore="MissingPrefix" />

    <ImageView
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:onClick="onMenuClicked"
        android:paddingEnd="@dimen/large_padding"
...
