...
    <string name="category_by">Categorize by:</string>
    <string name="add_name">Add names</string>
    <string name="seeds">Seeds</string>
    <string name="optional">*optional</string>
    <string name="add">+ Add</string>
    <string name="number_of_teams">Number of Teams</string>
    <string name="error_name_empty">Name cannot be empty!</string>
    <string name="total_paricipants">%s participants</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="team_text">Team %s</string>
    <string name="group_text">Group %s</string>
    <string name="list_name">List Name</string>
    <string name="start_new">Start New</string>
    <string name="error_name_duplicate">Name cannot be duplicated!</string>
    <string name="number_of_groups">Number of Groups</string>
    <string name="reuse">Reuse</string>
    <string name="empty_participant">Participant cannot be empty!</string>
    <string name="category_info_text_seed">Participants with the same seed will be\nin different teams/groups.</string>
    <string name="category_info_text_strength">Teams/groups will be randomized with\nparticipants having total similar strength.</string>
</resources>

